--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 /* src/index.css */
+@import url('https://fonts.googleapis.com/css2?family=Doto:wght@100..900&family=Inter:wght@300;400;600&family=Space+Mono:ital,wght@0,400;0,700;1,400&display=swap');
 
+@import url('https://api.fontshare.com/v2/css?f[]=clash-display@400,500,600,700&display=swap');
 html, body {
   margin: 0;
   padding: 0;
