--- a/src/main/main_components/Hero.css
+++ b/src/main/main_components/Hero.css
@@ -191,6 +191,8 @@
   text-transform: uppercase;
   margin-bottom: 2rem;
   letter-spacing: -0.02em;
+  font-family: url('https://api.fontshare.com/v2/css?f[]=clash-display@400,500,600,700&display=swap');
+;
 }
 
 .outline-text {
